UtahLiveDataTest/src/objects/GranteeBudgetCategoryMapping__c.object
<CustomObject>
    <description>[Business] Budget Categories for an Awards are stored on this object</description>
    <fields>
        <fullName>AwardBudgetCategory__c</fullName>
        <label>Award Budget Category</label>
        <referenceTo>AwardBudgetCategory__c</referenceTo>
        <relationshipLabel>Grantee Budget Category Mapping</relationshipLabel>
        <relationshipName>Grantee_Budget_Category_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category Mapping</label>
        <referenceTo>BudgetCategoryMapping__c</referenceTo>
        <relationshipLabel>Grantee Budget Category Mapping</relationshipLabel>
        <relationshipName>Grantee_Budget_Category_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeFiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grantee Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Grantee Budget Category Mapping</relationshipLabel>
        <relationshipName>State_Budget_Category_Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Grantee Budget Category Mapping</label>
    <nameField>
        <displayFormat>GBC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grantee Budget Category Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>